--- a/src/app/events/add-event/add-event.component.html
+++ b/src/app/events/add-event/add-event.component.html
@@ -42,7 +42,12 @@
                         </select>
                         <label >Event Type</label>
                   </div>
-                
+                  
+                   <div class="form-group col-md-12">
+                  <h6>Add a Event Image <input type="file" (change)="onFileChange($event.target.files)" /></h6>
+                  <img  *ngIf="ImageUrl" [src]=ImageUrl id="icon" alt="User Icon" > 
+                </div>
+
                   <div class="form-group col-md-12">
                     <input type="date" class="form-control" formControlName="StartDate" id="StartDate" required>
                     <label >Event Start Date</label>
