--- a/src/styles.css
+++ b/src/styles.css
@@ -151,6 +151,7 @@ background-color: rgb(141, 13, 30);
   
   /* Label */
   label {
+    background-color: white;
     color: rgb(126, 124, 124);
     font-size: 18px;
     position: absolute;
