--- a/src/app/pastevent/comment/comment.component.css
+++ b/src/app/pastevent/comment/comment.component.css
@@ -1,54 +1,56 @@
+* {
+  -moz-box-sizing:border-box; 
+  box-sizing:border-box;
+  margin:0;
+  padding:0;
+}
 body {
-    background: #eee;
-  }
-  
-  .container {
-    background: #fff;
-    padding: 30px;
-    width: 700px;
-  }
-  .comments-section img {
-    margin-top: 3px; }
-  
-  .comments-section p {
-    line-height: 15px; }
-  
-  .comments-section .comment-author {
-    font-weight: 400;
-    font-size: 20px;
-    letter-spacing: 1px;
-    color: #cc3642; }
-  
-  .comments-section .comment-time {
-    font-style: italic;
-    font-size: 11px;
-    margin-left: 10px;
-    color: #888888; }
-  
-  .comments-section .comment-content {
-    font-size: 16px;
-    font-weight: 100;
-    padding-bottom: 30px;
-    line-height: 25px;
-    letter-spacing: 1px;
-  }
-  
-  .comments-section .comment-post-reply .comment-content,
-  .comments-section .comment-post-reply .comment-author {
-    color: #888888; }
-  
-  .comments-section textarea {
-    width: 100%;
-    height: 150px;
-    border: 1px solid #d9d9d9;
-    border-radius: 5px;
-    padding: 10px; }
-  
-  .comments-section .btn {
-    padding: 5px 10px;
-    color: #727272;
-    letter-spacing: 4px; }
-  
-  .comments-section .btn-default:hover {
-    background-color: #cc3642;
-    color: #fff; }
+  margin:0 auto; 
+  padding:1rem; 
+  max-width:640px; 
+  font-family:sans-serif; 
+  color:#333; 
+  background-color:#CCC;
+  font-size:12pt;
+}
+h1 {
+  color:#555;
+  font-weight:normal;
+  border-bottom:2px solid #CCC;
+  margin-bottom:2rem;
+}
+#comments {
+  background-color:#FFF;
+  padding:1rem 2rem;
+}
+.comment {
+  position:relative; 
+  margin:2rem 0 0 0;
+  background-color:#EEE; 
+  border:2px solid #AAA; 
+  -webkit-border-radius:0.25rem; 
+  -moz-border-radius:0.25rem; 
+  border-radius:0.25rem; 
+  font-size:10pt;
+}
+.username {
+  position:absolute;
+  top:-1.5em;
+  left:0;
+  margin-left:2rem;
+  font-weight:bold;
+}
+.comment p {
+  margin:0.5rem 0.5rem 0.5rem 2rem;
+}
+.avatar {
+  position:absolute; 
+  max-width:3rem; 
+  max-height:3rem; 
+  border:2px solid #AAA; 
+  -webkit-border-radius:1.5rem; 
+  -moz-border-radius:1.5rem; 
+  border-radius:1.5rem; 
+  top:-1.5rem; 
+  left:-1.5rem;
+}
