--- a/src/app/profile/forget-employee-password/forget-employee-password.component.html
+++ b/src/app/profile/forget-employee-password/forget-employee-password.component.html
@@ -21,11 +21,11 @@
                             <small *ngIf="validateControl('code') && hasError('code', 'required')">*register code is required</small>
                          </div>
                          <div class="form-group col-md-12">
-                            <input  placeholder="new password" class="form-control" type="text" formControlName="password" id="password">
+                            <input  placeholder="new password" class="form-control" type="password" formControlName="password" id="password">
                             <small *ngIf="validateControl('password') && hasError('password', 'required')">*register code is required</small>
                          </div>
                          <div class="btn-group" role="group" aria-label="Basic example">
-                              <button type="submit" class="btn btn-success" [disabled]="!registerForm.valid">Register</button>
+                              <button type="submit" class="btn" id="btn" [disabled]="!registerForm.valid">Register</button>
                           </div>
                     </div>
               </form>
