--- a/src/app/profile/login-employee/login-employee.component.html
+++ b/src/app/profile/login-employee/login-employee.component.html
@@ -1,7 +1,7 @@
 
 <!------ Include the above in your HEAD tag ---------->
 <div id = "back">
-<div class="wrapper fadeInDown col-md-4 container">
+<div class="wrapper fadeInDown col-sm-8 col-md-6 col-lg-4 container">
   <div id="formContent">
     <!-- Tabs Titles -->
 
