--- a/src/app/profile/Department/show-departments-details/show-departments-details.component.html
+++ b/src/app/profile/Department/show-departments-details/show-departments-details.component.html
@@ -6,7 +6,9 @@
 			<div class="col-md-12">
 				<div class="tableWithHeader ">
 					<div class="Header">
-						<h3 class="panel-title">..All Department Details..</h3>
+						<h3 class="panel-title">..All Department Details..
+              <!-- <button type="button" class="btn  btn-sm" data-toggle="modal" data-target="#myModal">create</button> -->
+            </h3>
 						
 					</div>
 					
@@ -16,6 +18,8 @@
             <tr >
                 <th>Department Id</th>
               <th>Department Name</th>
+              <th>Update</th>
+              
               <th></th>
               <th *ngIf="isAdmin"></th>
              
@@ -25,9 +29,13 @@
               <td>{{i.dprtId}}</td>
               <td>{{i.dprtName}}</td>
               
-                 <td><button type="button" id="update" class="btn btn-success" (click)=updateDepartment(i.dprtId)>Update</button></td>
+                 <td><button type="button" id="update" class="btn btn-success" (click)=updateDepartment(i.dprtId)><img id="loadImage" style=" width : 25px;" class="card-img-top" src="assets/details.png" alt="Cinque Terre" ></button></td>
                     <td *ngIf="isAdmin"><button type="button" id="delete" class="btn btn-danger" (click)=deleteEmployee(i.dprtId)>Delete</button></td>
-                 
+                
+                    <td  *ngIf="(i.isActive)&&(Loading!=i.dprtId)" ><button id="btn" type="button" id="delete" class="btn" (click)=DeActive(i.dprtId)>Deactive</button></td>
+                    <td  *ngIf="!(i.isActive)&&(Loading!=i.dprtId)"><button id="btn" type="button" id="delete" class="btn" (click)=Active(i.dprtId)>Active</button></td>
+                    <td *ngIf="(Loading==i.dprtId)"><div ><img id="loadImage" style=" width : 25px;" class="card-img-top" src="assets/loading1.gif" alt="Cinque Terre" ></div>
+                     </td>  
              
             </tr>
             </tbody>
@@ -38,5 +46,30 @@
 			
 		</div>
   </div>
+  <div class="container">
   
+    <!-- Trigger the modal with a button -->
+   
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+      <div class="modal-dialog">
+      
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
+            <!-- <h4 class="modal-title">Modal Header</h4> -->
+          </div>
+          <div class="modal-body">
+            <app-department-create></app-department-create>
+          </div>
+          <!-- <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div> -->
+        </div>
+        
+      </div>
+    </div>
+    
+  </div>
   
