--- a/src/app/profile/Department/update-department/update-department.component.html
+++ b/src/app/profile/Department/update-department/update-department.component.html
@@ -17,8 +17,8 @@
               <form [formGroup]="departmentForm" autocomplete="off" novalidate (ngSubmit)="createdepartment(departmentForm.value)">
                   <div class="form-group col-md-12">
                       <label for="email" class="sr-only">DepartmentId</label>
-                      <input class="form-control" formControlName="departmentId" id="departmentId" required>
-                     <label > Department Id</label>
+                      <input  disabled class="form-control" formControlName="departmentId" id="departmentId" required>
+                     <!-- <label > Department Id</label> -->
                       <em *ngIf="validateControl('departmentId') && hasError('departmentId', 'required')">*Department Id is required!</em>
                       <em *ngIf="validateControl('departmentId') && hasError('departmentId', 'email')">*This not a valid email!</em>
               
@@ -33,17 +33,17 @@
                   </div>
                   <div class="btn-group" role="group" aria-label="Basic example">
                   <button type="button" class="btn btn-danger" (click)="redirectToOwnerList()">Cancel</button>
-                  <button type="submit" class="btn btn-success" [disabled]="!departmentForm.valid">Create</button>
+                  <button type="submit" class="btn btn-success" [disabled]="!departmentForm.valid">Update</button>
                   
               </div> 
               </form>  
                   <!-- <div class="copy-text">For Create new account? <i class="fa fa-heart"></i><a id="crateAccountlink"  (click)="crateAccount()"> Create</a></div> -->
                   
               <!-- Remind Passowrd -->
-              <div id="formFooter">
+              <!-- <div id="formFooter">
                 <a  id="crateAccountlink"  class="underlineHover" ></a>
                
-              </div>
+              </div> -->
           
             </div>
           </div>
