--- a/src/app/profile/Position/update-roles/update-roles.component.html
+++ b/src/app/profile/Position/update-roles/update-roles.component.html
@@ -10,49 +10,46 @@
             
                 <!-- Icon -->
                 <div class="fadeIn first">
-                  <h1>Update Role</h1>
+                  <h1>Update Position</h1>
                 </div>
                 <h5 class="card-title"> <h3 id="msg">{{Message}}</h3></h5>
                 <!-- Sign up Form -->
-                <form [formGroup]="positionForm" autocomplete="off" novalidate (ngSubmit)="createrole(positionForm.value)">
+                <form [formGroup]="positionForm" autocomplete="off" novalidate (ngSubmit)="updaterole(positionForm.value)">
                     <div class="form-group col-md-12">
-                        <label for="email" class="sr-only">DepartmentId</label>
-                        <input class="form-control" formControlName="positionId" id="positionId"  required>
-                        <label> Position Id</label>
+                        
+                        <input disabled class="form-control" formControlName="positionId" id="positionId"  required>
+                        <!-- <label> Position Id</label> -->
                         <em *ngIf="validateControl('positionId') && hasError('positionId', 'required')">*Role Id is required!</em>
-                        <em *ngIf="validateControl('positionId') && hasError('positionId', 'email')">*This not a valid email!</em>
-                
+                   
                     </div>
                     <div class="form-group col-md-12">
-                        <label for="key" class="sr-only">Name</label>
+                       
                         <input type="text" formControlName="positionName" id="positionName" class="form-control" required>
                         <label> Position Name</label>
                         <em *ngIf="validateControl('positionName') && hasError('positionName', 'required')">*Role name is required</em>
-                        <em *ngIf="validateControl('positionName') && hasError('positionName', 'maxlength')">*Maximum allowed length is 100 characters.</em>
-                      
+                       
                     </div>
                     <div class="form-group col-md-12">
-                        <label for="key" class="sr-only">Dis</label>
+                        
                         <input type="text" formControlName="positionDis" id="positionDis" class="form-control" required>
                         <label> Position Description</label>
                         <em *ngIf="validateControl('positionDis') && hasError('positionDis', 'required')">*Description is required</em>
-                        <em *ngIf="validateControl('positionDis') && hasError('positionDis', 'maxlength')">*Maximum allowed length is 100 characters.</em>
-                      
+                       
                     </div>
                     
                     <div class="btn-group" role="group" aria-label="Basic example">
                     <!-- <button type="button" class="btn btn-danger" (click)="redirectToOwnerList()">Cancel</button> -->
-                    <button type="submit" class="btn btn-success" [disabled]="!positionForm.valid">Create</button>
+                    <button type="submit" class="btn btn-success" [disabled]="!positionForm.valid">Update</button>
                     
                 </div> 
                 </form>
                     <!-- <div class="copy-text">For Create new account? <i class="fa fa-heart"></i><a id="crateAccountlink"  (click)="crateAccount()"> Create</a></div> -->
                     
                 <!-- Remind Passowrd -->
-                <div id="formFooter">
+                <!-- <div id="formFooter">
                   <a  id="crateAccountlink"  class="underlineHover" ></a>
                  
-                </div>
+                </div> -->
             
               </div>
             </div>
