--- a/src/app/profile/Project/project-create/project-create.component.css
+++ b/src/app/profile/Project/project-create/project-create.component.css
@@ -16,3 +16,9 @@ h2{
 .card{
     background-color: rgba(247, 247, 247, 0.363);
 }
+.card label{
+    background-color: rgba(240, 248, 255, 0);
+}
+.card input {
+    background-color: rgba(240, 248, 255, 0);
+}
