--- a/src/app/profile/Project/project-view/project-view.component.html
+++ b/src/app/profile/Project/project-view/project-view.component.html
@@ -6,7 +6,9 @@
   <div class="col-md-12">
     <div class="tableWithHeader ">
       <div class="Header">
-        <h3 class="panel-title">..All Project Details..</h3>
+        <h3 class="panel-title">..All Project Details.. 
+          <!-- <button type="button" class="btn  btn-sm" data-toggle="modal" data-target="#myModal">crate</button -->
+            </h3>
         
       </div>
       
@@ -17,6 +19,7 @@
             <th>Project Id</th>
           <th>Project Name</th>
           <th> Desciption</th>
+          <th>Update</th>
           <th></th>
           <th></th>
          
@@ -30,8 +33,8 @@
           <td>{{i.projectDescription}}</td>
           
              <td><button type="button" id="update" class="btn btn-success" (click)=updateProject(i.projectId)><img   style=" width : 15px;" class="card-img-top" src="assets/details.png" alt="Update" ></button></td>
-            <td *ngIf="(i.isActive)&&(Loading!=i.projectId)" ><button  type="button" id="delete" class="btn btn-danger" (click)=DeActive(i.projectId)>Deactive</button></td>
-            <td *ngIf="!(i.isActive)&&(Loading!=i.projectId)"><button type="button" id="delete" class="btn btn-success" (click)=Active(i.projectId)>Active</button></td>
+            <td  *ngIf="(i.isActive)&&(Loading!=i.projectId)" ><button id="btn" type="button" id="delete" class="btn" (click)=DeActive(i.projectId)>Deactive</button></td>
+            <td  *ngIf="!(i.isActive)&&(Loading!=i.projectId)"><button id="btn" type="button" id="delete" class="btn" (click)=Active(i.projectId)>Active</button></td>
             <td *ngIf="(Loading==i.projectId)"><div ><img id="loadImage" style=" width : 25px;" class="card-img-top" src="assets/loading1.gif" alt="Cinque Terre" ></div>
              </td>
          
@@ -45,3 +48,29 @@
 </div>
 </div>
 
+<div class="container">
+
+  <!-- Trigger the modal with a button -->
+ 
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
+          <!-- <h4 class="modal-title">Modal Header</h4> -->
+        </div>
+        <div class="modal-body">
+         <app-project-create></app-project-create>
+        </div>
+        <!-- <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div> -->
+      </div>
+      
+    </div>
+  </div>
+  
+</div>
