--- a/src/app/profile/admin-page/admin-page.component.html
+++ b/src/app/profile/admin-page/admin-page.component.html
@@ -1,13 +1,12 @@
 <app-nav-bar></app-nav-bar>
 
 <div class="form-row">
-    <div class="form-group col-md-1">
-    </div>
-    <div class="form-group col-md-10">
+  
+    <div class="form-group col-md-11 col-lg-10 col-sm-12 container">
      
 
 <div class="card">
-    <h5 class="card-header"><h2>Admin Controller Page</h2></h5>
+    <h2>Admin Controller Page</h2>
     <div class="card-body">
   
       
@@ -15,35 +14,54 @@
           <div>
               
             </div>
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <br>
-              <div class="btn-group" role="group" aria-label="Basic example">
+            <div class="form-row ">
+                <div class="form-group col-md-6 container">
+                    <div class="btn-group" role="group" aria-label="Basic example">
+                        <button id="btn" (click) ="isdepartment()" routerLink="/profile/admin/departments" routerLinkActive="active" type="button" class="btn ">View Departments</button>
+                        <button id="btn" (click)="isrole()" routerLink="/profile/admin/roles" routerLinkActive="active" type="button" class="btn ">View Roles</button>
+                        <button id="btn" (click)="isproject()"  routerLink="/profile/admin/project" routerLinkActive="active" type="button" class="btn ">View Projects</button>
+                        
+                      </div>
+                </div>
+            </div>
+
+        <div class="form-row ">
+   
+          <div class="form-group col-md-8 container">
+              <!-- <app-show-roles-details></app-show-roles-details> -->
+              <br>
+           
+                
+                <div >
+                  <router-outlet></router-outlet>
+                </div>
+            
+          </div>
+          <div class="form-group col-md-4 container">
+            <br><br><br> 
+            <div  *ngIf="department"><app-department-create></app-department-create></div>
+              <div *ngIf="role"><app-role-create></app-role-create></div>
+              <div *ngIf="project"><app-project-create></app-project-create></div>
+          </div>
+          <!-- <div class="form-group col-md-6"> -->
+            
+              <!-- <div class="btn-group" role="group" aria-label="Basic example">
                   <button id="btn" (click) ="isdepartment()"  type="button" class="btn"> Create Departments</button>
                   <button id="btn"  (click)="isrole()" type="button" class="btn"> Create Roles</button>
                   <button id="btn"  (click)="isproject()" type="button" class="btn"> Create Project</button>
                   <br>
                 </div>
-                <br><br><br>
-              <div  *ngIf="department"><app-department-create></app-department-create></div>
+                <div  *ngIf="department"><app-department-create></app-department-create></div>
               <div *ngIf="role"><app-role-create></app-role-create></div>
               <div *ngIf="project"><app-project-create></app-project-create></div>
-              
+               -->
                
               <!-- <app-show-departments-details></app-show-departments-details> -->
-          </div>
-          <div class="form-group col-md-6">
-              <!-- <app-show-roles-details></app-show-roles-details> -->
-              <br>
-              <div class="btn-group" role="group" aria-label="Basic example">
-                  <button id="btn"  routerLink="/profile/admin/departments" routerLinkActive="active" type="button" class="btn ">View Departments</button>
-                  <button id="btn"  routerLink="/profile/admin/roles" routerLinkActive="active" type="button" class="btn ">View Roles</button>
-                  <button id="btn"  routerLink="/profile/admin/project" routerLinkActive="active" type="button" class="btn ">View Projects</button>
-                  
-                </div>
-                <br><br><br>
-              <router-outlet></router-outlet>
-          </div>
+          <!-- </div> -->
+
+
+      
+      
         </div>
       </div>
       
@@ -54,5 +72,3 @@
   </div>
 
 </div>
-<div class="form-group col-md-1">
-  </div>
