--- a/src/app/shared-module/nav-bar/nav-bar.component.html
+++ b/src/app/shared-module/nav-bar/nav-bar.component.html
@@ -24,14 +24,14 @@
       <a class="nav-link" routerLink="/profile/list" routerLinkActive="active ">Members</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/profile/update" routerLinkActive="active ">Uppdate Members</a>
+      <a class="nav-link" routerLink="/profile/update" routerLinkActive="active ">Update Members</a>
     </li>
 
     <li class="nav-item">
       <a class="nav-link" routerLink="/task/contact" routerLinkActive="active ">Contact</a>
     </li>
     <li>
-        <a class="nav-link" routerLink="/profile/admin" routerLinkActive="active ">Admin page</a>
+        <a class="nav-link" routerLink="/profile/admin/departments" routerLinkActive="active ">Admin page</a>
    
     </li>
     <li class="nav-item dropdown" >
