--- a/src/app/pastevent/imageview/imageview.component.html
+++ b/src/app/pastevent/imageview/imageview.component.html
@@ -30,6 +30,13 @@
   </div>
 </li> -->
 
+<li class="nav-item">
+
+  <a class="nav-link" > <button class="btn" class="btn btn-outline-dark" (click)=gotoimageupload(eventId)>Image Upload</button></a>
+  <a class="nav-link" > <button class="btn" class="btn btn-outline-dark" (click)=gotocomment(eventId)>Comment section</button></a>
+</li>
+
+
 <section class="no-touch">
   <div class="wrap">
     <div *ngFor="let i of result">
