--- a/src/app/pastevent/pastdetail/pastdetail.component.html
+++ b/src/app/pastevent/pastdetail/pastdetail.component.html
@@ -8,14 +8,14 @@
       <img id="topicImage" class="card-img-top" src=""
         alt="Card image cap">
       <div id="dateplace">
-       <div class="alert alert-success"> <h3  >hi</h3>
+       <div class="alert alert-success"> <h3  >{{event.name}}</h3>
         
        
         </div>
       </div>
       <div class="card-body">
 
-        <!-- <h5 class="card-title">Summary</h5> -->
+        <h5 class="card-title">{{event.eventName}}</h5>
 
         <div class="row">
           <div class="col-6">
@@ -48,8 +48,7 @@
           </div>
           <div class="col-6">
             <p>
-    lkkkkkkkkkkkkkkkkkkkkkkkk
-
+              {{event.eventDescription}}
     
              </p>
 
