--- a/src/app/pastevent/comment/comment.component.css
+++ b/src/app/pastevent/comment/comment.component.css
@@ -21,7 +21,8 @@ h1 {
 }
 #comments {
   background-color:#FFF;
-  padding:1rem 2rem;
+  padding:1rem 2rem; 
+  width: 600px;
 }
 .comment {
   position:relative; 
@@ -32,6 +33,8 @@ h1 {
   -moz-border-radius:0.25rem; 
   border-radius:0.25rem; 
   font-size:10pt;
+ 
+
 }
 .username {
   position:absolute;
