--- a/src/app/task/update-task/update-task.component.html
+++ b/src/app/task/update-task/update-task.component.html
@@ -1,31 +1,15 @@
-<app-nav-bar></app-nav-bar>
 <section class="testimonial py-5" id="testimonial">
     <div class="container">
         <div class="row ">
-            <div class="col-md-4 py-5 text-white text-center " id="sideA">
-                <div class="sideA">
-                    <div class="card-body">
-                        <img src="assets/_image/cslogo.png" style="width:30%">
-                        
-                        <h2 class="py-3">Assign Tasks</h2>
-                        <p>Tation argumentum et usu, dicit viderer evertitur te has. Eu dictas concludaturque usu, facete detracto patrioque an per, lucilius pertinacia eu vel.
+            
   
-  </p>
-                    </div>
-                </div>
-            </div>
-  
-  
-            <div class="col-md-8 py-5 border" id="formV">
+            <div class="col-md-8  border ml-5" id="formV">
                     <form [formGroup]="taskForm"  autocomplete="off" novalidate (ngSubmit)="updateTask(taskForm.value)">
 
                         
                      <div class="form-row">
-                        <!--div class="form-group col-md-6">
-                          <input  placeholder="Task ID" class="form-control" type="text" formControlName="TaskId" id="TaskID">
-                          <em *ngIf="validateControl('TaskId') && hasError('TaskId', 'required')">*ID is required</em>
-                          
-                        </div-->
+                        
+                       
                     
                     <div class="form-group col-md-12">
                       <input  placeholder="Task Name" class="form-control" type="text" formControlName="TaskName" id="TaskName">
@@ -35,13 +19,18 @@
                 </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                          <input type="text" class="form-control"  placeholder="Responsible RC member" formControlName="EmployeeEmpId" value="employeeId" id="EmployeeEmpId" [(ngModel)]="goalText">
+                          <!-- <input type="text" class="form-control"  placeholder="Responsible RC member" formControlName="EmployeeEmpId" id="EmployeeEmpId" [(ngModel)]="goalText"> -->
+                          <span class="sp1">Responsible RC</span>
                           
+                              <div *ngFor="let j of emailFormArray;">
+                                  {{j}}
+                              </div>
+                          
+                        
+
                           <em *ngIf="validateControl('EmployeeEmpId') && hasError('EmployeeEmpId', 'required')">*Name is required</em>
-                          <!--button type="button" class="btn btn-link btn-sm" data-toggle="modal" data-target="#exampleModalCenter">
-                                Employee List
-                              </button-->
-                              <button type="button" class="btn btn-link btn-sm" (click)="open(content)"> Employee List</button>
+                          
+                              <button class="btn btn-link btn-sm" (click)="open(content)"> Employee List</button>
                               <ng-template #content let-c="close" let-d="dismiss">
                                   <div class="modal-header">
                                     <h4 class="modal-title" id="modal-basic-title">Employee list</h4>
@@ -49,19 +38,19 @@
                                       <span aria-hidden="true">&times;</span>
                                     </button>
                                   </div>
+                                  <!-- employee list -->
                                   <div class="modal-body">
                                     <table class="table table-borderless">
-                                    <tr *ngFor="let i of result;">
-                                      <td><button type="button" class="btn btn-light" (click)="selectEmp(i.empId,i.empName)">{{i.empName}}</button></td>
+                                        <tr *ngFor="let i of result;" class="form-check">
+                                      
+                                    <td><input type="checkbox" class="form-check-input" (change)="onChange(i.id,i.empName, $event.target.checked)"name="{{ i.empName }}" id="{{i.empName}}">{{i.empName}}</td>
+                                    <!-- <td><button class="btn btn-light" (click)="selectEmp(i.empId,i.empName)">{{i.empName}}</button></td> -->
                                      
                                     </tr>
-                                    </table>
-                                    
-                  
-                                         
-                  
-                  
-                                  </div>
+                                    </table>                              
+                                    </div>
+
+                                     <!-- end -->
                                   <div class="modal-footer">
                                       <small class="text-muted">
                                          
@@ -74,15 +63,7 @@
                       
                       </div>
                       <div class="form-row">
-                              <!--div class="form-group col-md-6">
-                                    <select class="form-control" formControlName="EventName" placeholder="Event" id="EventName">
-                                            <option value="" selected disabled hidden>Event</option>
-                                             <option [value]="d.dprtId" *ngFor="let d of departments">{{d.dprtName}}</option> 
-                                        </select>
-                         
-                              </div>
-                              <em *ngIf="validateControl('EventName') && hasError('EventName', 'required')">*Event is required</em-->
-               
+                              
                               <div class="form-group col-md-6">
                                       <input  placeholder="Budgeted Cost" class="form-control" formControlName="BudgetedCost" type="text" id="bcost">
                                       <em *ngIf="validateControl('BudgetedCost') && hasError('BudgetedCost', 'required')">*Budgeted Cost is required</em>
@@ -101,7 +82,8 @@
                         <div class="form-group col-md-6">
                               <input  placeholder="End Date" class="form-control" type="date" formControlName="EndDate" id="edate">
                               <em *ngIf="validateControl('EndDate') && hasError('EndDate', 'required')&& validateDate()">*End date is required</em>
-                            
+                              <!-- <em *ngIf="DateControl('StartDate','EndDate')">*Not valid Date</em> -->
+
                           </div>
                           <!--div class="form-group col-md-6">
                                 <input  placeholder="Admin" class="form-control" type="text" formControlName="Admin" id="Admin">
@@ -121,7 +103,7 @@
                         <div class="form-group">
                                   <div class="btn-group" role="group" aria-label="Basic example">
                                       <button type="button" class="btn btn-danger" (click)="redirectToTaskList()">Cancel</button>
-                                      <button type="submit" class="btn btn-success" >Save</button>
+                                      <button type="submit" class="btn btn-success"  [disabled]="!taskForm.valid">Add Task</button>
                                       <button type="button" class="btn btn-success" [disabled]="!taskForm.valid" (click)="sendEmail()">Send Email</button>
 
                                     </div>
