--- a/src/app/pastevent/imageview/imageview.component.html
+++ b/src/app/pastevent/imageview/imageview.component.html
@@ -40,12 +40,15 @@
 <section class="no-touch">
   <div class="wrap">
     <div *ngFor="let i of result">
-      <div class="box">
+      <div class="box">       
         <div class="boxInner">
           <img class="images" [src]="ImageUrl+i.imageId" alt="Cinque Terre">
-          <div class="titleBox">Winding garden path</div>
+         
+          <div class="titleBox"> <button  (click)=deleteimage(i.imageId) id="btn">delete </button></div>
         </div>
+        
       </div>
+      
     </div>
    </div>
 </section>
