--- a/src/app/pastevent/comment/comment.component.html
+++ b/src/app/pastevent/comment/comment.component.html
@@ -1,4 +1,4 @@
-<app-nav-bar></app-nav-bar>
+<!-- <app-nav-bar></app-nav-bar> -->
 
 <div class="container">
 
@@ -19,10 +19,10 @@
 				</div>
 				</div>
 			</div> -->
-			<div class="col-4">
+			<div class="col-12">
 				<section id="comments">
 					<header>
-						<h1>Comments</h1>
+						<h1>Comment section</h1>
 					</header>
 					<div *ngFor="let e of comment">
 						<div class="comment">
@@ -35,7 +35,7 @@
 							<p>{{e.commentIn}}</p>
 
 						</div>
-						<button id="btn" (click)=deletecomment(e.commentId)>delete </button>
+						<button *ngIf="e.empId==author" id="btn" (click)=deletecomment(e.commentId)>delete </button>
 					</div>
 				</section>
 
