--- a/src/app/pastevent/eventcard/eventcard.component.css
+++ b/src/app/pastevent/eventcard/eventcard.component.css
@@ -2,14 +2,16 @@
 .card-deck{
     margin-left: 10%;
     margin-right: 10%;
-    margin-top: 20%
+    margin-top: 20%;
+    width: 25em;
+    
 
 }
 
 .card {
     /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
     transition: 0.3s;
-    width: 100%;
+    width: 100%
 }
 
 .card:hover {
@@ -18,4 +20,10 @@
 
 .container {
     padding: 2px 16px;
+}
+.card-img-top{
+    width: 100%
+}
+#crateAccountlink{
+    color: brown;
 }
