--- a/src/app/pastevent/eventcard/eventcard.component.html
+++ b/src/app/pastevent/eventcard/eventcard.component.html
@@ -6,18 +6,20 @@
 
 
 
-            <div *ngFor="let e of event">
+            <div *ngFor="let e of event" class="col-md-4 col-lg-4 col-sm-6">
 
-                <div (click)=moredetail(e.id) class="card-deck">
+                <div (click)=moredetail(e.id) class="card-deck container">
 
-                    <div class="card">
-                        <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQBK3FmyjIENz16NWEl1iJcIWj8I5n8hs-rl5JPixzw-XppNfKx"
+                    <div class="card container" id="zoom2">
+                        <img class="card-img-top" [src]="ImageUrl+e.eventImageUrl"
                             alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">{{e.eventName}}</h5>
-                            <a id="btn" [class.click]="(ClickId==e.id)" (click)=moredetail(e.id)>moredetail</a>
+                            <h5 class="card-title">{{e.eventTitle}}</h5>
+                            <p> {{e.startDate|date}}</p>
+                            <p> {{e.destination}}</p>
+                            <!-- <button id="btn" class="btn "  (click)=moredetail(e.id)>moredetail</button> -->
                             <br>
-                            <a id="btn" [class.click]="(ClickId==e.id)" (click)=Upgradeevent(e.id)>Upgrade</a>
+                            <p id="crateAccountlink"  class="underlineHover" (click)=Upgradeevent(e.id)>update</p>
                         </div>
                     </div>
                 </div>
