--- a/src/app/pastevent/sidebar/sidebar.component.html
+++ b/src/app/pastevent/sidebar/sidebar.component.html
@@ -10,9 +10,9 @@
       <!-- <div id="demo" class="collapse"> -->
         <div class="sidenav">
           <br><br>
-          <div id="topicside">All Events </div>
+          <div id="topicside"></div>
           <div *ngFor="let e of event">
-            <a [class.click]="(ClickId==e.id)" (click)=gotoEvent(e.id)>{{e.eventName}}</a>
+            <a [class.click]="(ClickId==e.id)" (click)=gotoEvent(e.id)>{{e.eventTitle}}</a>
          
 
           </div>
